# solana-vanity-keypair-generator

./: .gitignore  .npmignore  README.md  package.json  tsconfig.json
lib/: index.d.ts  index.js  index.ts  test.ts
native/: Cargo.toml
native/src/: lib.rs
