[package]
name = "vanity-generator"
version = "0.1.0"
authors = ["michaelbeerhelio <michael.beer@helio.co>"]
license = "MIT"
build = "build.rs"
edition = "2018"
exclude = ["artifacts.json", "index.node"]

[lib]
name = "vanity_generator"
crate-type = ["cdylib"]

[build-dependencies]
neon-build = "0.10.1"

[dependencies]
neon = "0.10.1"
solana-sdk = "1.17"
base64 = "0.21.7"
num_cpus = "1.16.0"